2000-04-29  Jason Leach  <leach@wam.umd.edu>

	* all files: renamed gedit_debug_mess -> gedit_debug
	
	* gedit.c (options): new command-line option --debug to turn on
	debug messages in gedit, default to disable.

	* utils.h (gedit_debug): new debug stdout thingy.

	* utils.c (gedit_debug_mess): #if'd out this, it's getting
	replaced with a #define'd gedit_debug in utils.h

2000-04-29  Chema Celorio  <chema@celorio.com>

	* print.c: typo.

	* plugin.c (gedit_plugins_window_add): Memory leak fix,
	free path.

2000-04-28  Chema Celorio  <chema@celorio.com>

	* print.c (file_print_cb): Finished the word wrapping
	stuff

	* recent.c (recent_update_menus): Fix a bug that will make
	the print item in the File menu disapear when the recent
	file list was < 4. 


2000-04-27  Chema Celorio  <chema@celorio.com>

	* print.c (print_line): Started doing the word wrapping
	versus word clipping so that we can use the printing 
	code in pan.

	* menus.c (gedit_file_menu): Fixed a small bug where the
	print menu item will appear in the wrong place if gedit
	is launched with a file as an argument.

2000-04-25  Jason Leach  <leach@wam.umd.edu>

	* recent.c: Replaced the use of gnome-history with custom routines
	to store history in ~/.gnome/gedit, much better.

2000-04-21  Alex Roberts  <bse@error.fsnet.co.uk>

	* file.c: Fixed various spelling mistakes.
	(file_revert_do): added translation tags

2000-04-20  Chema Celorio  <chema@celorio.com>

	* print.c (print_document): Added gnome_print_beginpage
	  we can now navigate postscript output with gv

2000-04-20  Alex Roberts  <bse@error.fsnet.co.uk>

	* dialogs/about.glade: Added my email address.

2000-04-18  Chema Celorio  <chema@celorio.com>

	* print.c: added a print range to the print
	  dialog and moved the initialization for
	  printing.

2000-04-15  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c (prepare_pagesize_page): new function
	(prepare_printing_page): load spin button with value
